--- a/client/views/partials/admin/orderProcess/loadOwnerBilling.html
+++ b/client/views/partials/admin/orderProcess/loadOwnerBilling.html
@@ -3,7 +3,8 @@
     <div class="col-xs-12">
         <div class="tabs-title">
             <ul class="nav nav-tabs">
-                <li><a  href="#" ui-sref="orderprocess.editOrderRequest({orderId:orderDetails._id})">Truck Owner Billing</a></li>
+                <li><a href="#" ui-sref="orderprocess.editOrderRequest({orderId:orderDetails._id})">Truck Owner
+                    Billing</a></li>
                 <li class="active"><a href="#" ui-sref="orderprocess.loadOwnerBilling">Load Owner Billing</a></li>
             </ul>
         </div>
@@ -53,13 +54,13 @@
                             <ul class="list-inline">
                                 <li class="pull-left"><b>Load Owner OwnerBilling</b></li>
                                 <li class="pull-right">
-                                    <button class="btn btn-primary"  ng-click="truckPayment('Load Owner')">New</button>
+                                    <button class="btn btn-primary" ng-click="truckPayment('Load Owner')">New</button>
                                 </li>
                             </ul>
                         </div>
                         <div class="col-xs-12">
                             <div class="col-xs-12">
-                                <table class="table table-bordered table-hover">
+                                <table class="table table-hover">
                                     <thead>
                                     <th>Date</th>
                                     <th>Comment</th>
@@ -67,7 +68,7 @@
                                     <th>Amount</th>
                                     </thead>
                                     <tbody>
-                                    <tr  ng-repeat="payments in paymentsDetails.payments">
+                                    <tr ng-repeat="payments in paymentsDetails.payments">
                                         <td>{{payments.createdAt | date:'dd-MM-yyyy'}}</td>
                                         <td>{{payments.comment}}</td>
                                         <td>{{payments.prefix}}</td>
@@ -81,20 +82,22 @@
                                     </tr>
                                     </tbody>
                                 </table>
+                                <p><b>NOTE:</b> +:You receive Money from load owner,-:you pay Money to load owner</p>
                             </div>
                         </div>
 
                         <div class="col-xs-12 perTransct">
                             <ul class="list-inline">
-                                <li class="pull-left"><b>Truck Owner Transactions</b></li>
+                                <li class="pull-left"><b>Load Owner Transactions</b></li>
                                 <li class="pull-right">
-                                    <button class="btn btn-primary">New</button>
+                                    <button class="btn btn-primary" ng-click="truckTransaction('Load Owner')">New
+                                    </button>
                                 </li>
                             </ul>
                         </div>
                         <div class="col-xs-12">
                             <div class="col-xs-12">
-                                <table class="table table-bordered  table-hover">
+                                <table class="table table-hover">
                                     <thead>
                                     <th>Date</th>
                                     <th>Comment</th>
@@ -104,83 +107,52 @@
                                     <th>Amount</th>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <td>22-07-2016</td>
-                                        <td>Balance Amount Paid</td>
-                                        <td>+</td>
-                                        <td>Sravan B</td>
-                                        <td>Cash</td>
-                                        <td>29600</td>
+                                    <tr ng-repeat="transacDetails in transactionsDetails.transactions">
+                                        <td>{{transacDetails.createdAt | date:'dd-MM-yyyy'}}</td>
+                                        <td>{{transacDetails.comment}}</td>
+                                        <td>{{transacDetails.prefix}}</td>
+                                        <td>{{transacDetails.paymentBy.firstName || 'NA'}}</td>
+                                        <td>{{transacDetails.paymentType || 'NA'}}</td>
+                                        <td><i class="fa fa-inr"></i> {{transacDetails.amount}}</td>
                                     </tr>
                                     <tr>
-                                        <td>22-07-2016</td>
-                                        <td>Balance Amount Paid</td>
-                                        <td>+</td>
-                                        <td>Sravan B</td>
-                                        <td>Cash</td>
-                                        <td>29600</td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td></td>
+                                        <td><b>Total</b></td>
+                                        <td><b><i class="fa fa-inr"></i> {{transactionsDetails.total}}.00</b></td>
                                     </tr>
                                     </tbody>
                                 </table>
                             </div>
                         </div>
+
+
                         <div class="col-xs-12 perTransct">
                             <ul class="list-inline">
-                                <li class="pull-left"><b>Route Expenses</b></li>
-                            </ul>
-                        </div>
-                        <div class="col-xs-12">
-                            <div class="col-sm-3 col-xs-12">
-                                <div class="form-group styling-input-list">
-                                    <input type="text" class="form-control order-form-control" name="podFront"/>
-                                    <label class="order-effect-for-input">Diesel Expenses</label>
-                                </div>
-                            </div>
-                            <div class="col-sm-3 col-xs-12">
-                                <div class="form-group styling-input-list">
-                                    <input type="text" class="form-control order-form-control" name="podFront"/>
-                                    <label class="order-effect-for-input">Toll Gate Charges</label>
-                                </div>
-                            </div>
-                            <div class="col-sm-3 col-xs-12">
-                                <div class="form-group styling-input-list">
-                                    <input type="text" class="form-control order-form-control" name="podBack">
-                                    <label class="order-effect-for-input">Loading/Unloading</label>
-                                </div>
-                            </div>
-                            <div class="col-sm-3 col-xs-12">
-                                <div class="form-group styling-input-list">
-                                    <input type="text" class="form-control order-form-control" name="podBack">
-                                    <label class="order-effect-for-input">Police Charges</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 perTransct">
-                            <ul class="list-inline">
-                                <li class="pull-left"><b>Comments</b></li>
+                                <li class="pull-left"><b>Update Status</b></li>
                                 <li class="pull-right">
-                                    <button class="btn btn-primary">New</button>
+                                    <button class="btn btn-primary" ng-click="addOrderComment('Load Owner')">New
+                                    </button>
                                 </li>
                             </ul>
                         </div>
                         <div class="col-xs-12">
                             <div class="col-xs-12">
-                                <table class="table table-bordered text-center table-hover">
+                                <table class="table table-hover">
                                     <thead>
                                     <th>Date</th>
+                                    <th>Status</th>
                                     <th>Comment</th>
-                                    <th>Amount</th>
+                                    <th>Notify</th>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <td>22-07-2016</td>
-                                        <td>Balance Amount Paid</td>
-                                        <td>29600</td>
-                                    </tr>
-                                    <tr>
-                                        <td>22-07-2016</td>
-                                        <td>Balance Amount Paid</td>
-                                        <td>29600</td>
+                                    <tr ng-repeat="comment in comments">
+                                        <td>{{comment.createdAt | date:'dd-MM-yyyy'}}</td>
+                                        <td>{{comment.status}}</td>
+                                        <td>{{comment.comment}}</td>
+                                        <td>{{comment.notify}}</td>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -199,8 +171,8 @@
                     <div class="row truckBooking">
                         <div class="col-sm-4 col-xs-12">
                             <ul class="list-inline">
-                                <li><b>Date Ordered:</b> 21-06-2016 05:00 AM</li>
-                                <li><b>Order Status:</b> Processing</li>
+                                <li><b>Date Ordered:</b> {{orderDetails.dateOfOrder | date:'dd-MM-yyyy'}}</li>
+                                <li><b>Order Status:</b> {{orderDetails.status}}</li>
                             </ul>
                         </div>
                         <div class="col-sm-4 col-xs-12">
@@ -212,9 +184,9 @@
                         </div>
                         <div class="col-sm-4 col-xs-12">
                             <ul class="list-inline">
-                                <li><b>Pickup Point:</b>Hyderbad</li>
-                                <li><b>Pickup Date/Time:</b>21-06-2016 05:00 AM</li>
-                                <li><b>Goods Type:</b>All</li>
+                                <li><b>Pickup Point:</b> {{orderDetails.source}}</li>
+                                <li><b>Pickup Date/Time:</b> {{orderDetails.pickupDate | date:'dd-MM-yyyy'}}</li>
+                                <li><b>Goods Type:</b> All</li>
                             </ul>
                         </div>
                     </div>
@@ -222,49 +194,49 @@
                         <div class="col-xs-4">
                             <div class="form-group styling-input-list">
                                 <input class="form-control order-form-control" type="text"
-                                       ng-model="newOrderRequest.source"/>
+                                       ng-model="orderDetails.source"/>
                                 <label class="order-effect-for-input">Source Address*</label>
                             </div>
                         </div>
                         <div class="col-xs-4">
                             <div class="form-group styling-input-list">
                                 <input class="form-control order-form-control" type="text"
-                                       ng-model="newOrderRequest.destination"/>
+                                       ng-model="orderDetails.destination"/>
                                 <label class="order-effect-for-input">Destination Address*</label>
                             </div>
                         </div>
                         <div class="col-xs-4">
                             <div class="form-group styling-input-list">
                                 <input class="form-control order-form-control" type="text"
-                                       ng-model="newOrderRequest.dateOfOrder"/>
+                                       ng-model="orderDetails.dateOfOrder"/>
                                 <label class="order-effect-for-input">Payable Amount</label>
                             </div>
                         </div>
                         <div class="col-xs-4">
                             <div class="form-group styling-input-list">
                                 <input class="form-control order-form-control" type="text"
-                                       ng-model="newOrderRequest.truckType"/>
+                                       ng-model="orderDetails.truckType"/>
                                 <label class="order-effect-for-input">Truck Type*</label>
                             </div>
                         </div>
                         <div class="col-xs-4">
                             <div class="form-group styling-input-list">
                                 <input class="form-control order-form-control" type="text"
-                                       ng-model="newOrderRequest.registrationNo"/>
+                                       ng-model="orderDetails.registrationNo"/>
                                 <label class="order-effect-for-input">Truck Reg No*</label>
                             </div>
                         </div>
                         <div class="col-xs-4">
                             <div class="form-group styling-input-list">
                                 <input class="form-control order-form-control" type="text"
-                                       ng-model="newOrderRequest.driverName"/>
+                                       ng-model="orderDetails.driverName"/>
                                 <label class="order-effect-for-input">Driver Name</label>
                             </div>
                         </div>
                         <div class="col-xs-4">
                             <div class="form-group styling-input-list">
                                 <input class="form-control order-form-control" type="text"
-                                       ng-model="newOrderRequest.driverMobile"/>
+                                       ng-model="orderDetails.driverMobile"/>
                                 <label class="order-effect-for-input">Driver Mobile</label>
                             </div>
                         </div>
@@ -312,9 +284,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-xs-12">
                         <div class="form-group">
-                            <select class="form-control order-form-control" ng-model="transaction.comment"
-
-                            >
+                            <select class="form-control order-form-control" ng-model="transaction.comment">
                                 <option value="" selected>--Comment--</option>
                                 <option ng-repeat="comments in transactionComments" value="{{comments}}">
                                     {{comments.comment}}({{comments.prefix}})
@@ -358,10 +328,10 @@
                         <div class="form-group" ng-show="transaction.paymentType=='Account Transfer'">
                             <select class="form-control order-form-control" ng-model="transaction.bank">
                                 <option value="" selected>--Select Bank--</option>
-                                <option>SBI</option>
-                                <option>ICICI</option>
-                                <option>HDFC</option>
-                                <option>AXIS</option>
+                                <option value="SBI">SBI</option>
+                                <option value="ICICI">ICICI</option>
+                                <option value="HDFC">HDFC</option>
+                                <option value="AXIS">AXIS</option>
 
                             </select>
                         </div>
@@ -380,16 +350,34 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <div class="form-group col-sm-6 col-xs-12">
-                    <textarea class="form-control order-form-control" ng-model="comment.comment"
-                              placeholder="Comment..."></textarea>
+                    <div class="form-group col-sm-6">
+                    <textarea class="form-control" ng-model="comment.comment"
+                              placeholder="Comment..." rows="4"></textarea>
                     </div>
-                    <div class="form-group col-sm-6 col-xs-12">
-                        <input type="checkbox" class="form-control order-form-control" ng-model="comment.notify"
-                               placeholder="Notify"/>
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" ng-true-value="'YES'" ng-false-value="'NO'"
+                                           ng-model="comment.notify"/>
+                                    <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                    Notify Customer
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <select class="form-control order-form-control" ng-model="comment.status">
+                                <option value="" selected>--Select--</option>
+                                <option value="Pending">Pending</option>
+                                <option value="Rejected">Rejected</option>
+                                <option value="Processing">Processing</option>
+                                <option value="Delivered">Delivered</option>
+                                <option value="Pending Pod">Pending Pod</option>
+                                <option value="Completed">Completed</option>
+                            </select>
+                        </div>
                     </div>
-
-                    <div class="col-sm-12 text-center">
+                    <div class="col-xs-12 text-center">
                         <input type="button" class="btn btn-primary" value="Submit" ng-click="addOrderComment()"/>
                     </div>
                 </div>
