--- a/client/views/partials/trucks/trucks-list.html
+++ b/client/views/partials/trucks/trucks-list.html
@@ -78,7 +78,7 @@
             <td colspan="8">No trucks Records exist.</td>
         </tr>
     </table>
-    <div class="add-image pull-right" ng-show="createTruck">
+    <div class="add-image pull-right" ng-show="accountAccess">
         <figure>
             <a href="#" ng-click="goToEditTruckPage()">
                 <img src="images/Add_Truck.png" alt="Add Truck"
