--- a/client/views/partials/admin/orderProcess/editOrderRequest.html
+++ b/client/views/partials/admin/orderProcess/editOrderRequest.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 newCust"  ng-controller="viewOrderCtrl">
+<div class="col-xs-12 newCust" ng-controller="viewOrderCtrl">
     <h4>Edit Order Request</h4>
     <div class="col-xs-12">
         <div class="tabs-title">
@@ -16,8 +16,9 @@
                                                        ng-class="{'glyphicon-chevron-down': status.isOpen,
                                         'glyphicon-chevron-right': !status.isOpen}"></i>
 
-                        </uib-accordion-heading>
-                        <a href="#" class="print-icon" ng-click="printTruckOwnerBill()"><span class="glyphicon glyphicon-print"></span></a>
+                    </uib-accordion-heading>
+                    <a href="#" class="print-icon" ng-click="printTruckOwnerBill()"><span
+                            class="glyphicon glyphicon-print"></span></a>
 
                     <div class="row truckinfomain">
                         <div class="truckinfo">
@@ -361,7 +362,11 @@
                                 <tr ng-repeat="loc in locationsList">
                                     <td>{{loc.location}}</td>
                                     <td>{{loc.date | date:"dd-mm-yyyy"}}</td>
-                                    <td><button class="btn btn-danger" ng-click="deleteOrderLocation($index,loc)">Delete</button></td>
+                                    <td>
+                                        <button class="btn btn-danger" ng-click="deleteOrderLocation($index,loc)">
+                                            Delete
+                                        </button>
+                                    </td>
                                 </tr>
 
                                 </tbody>
