--- a/client/views/partials/gps/gpsReports.html
+++ b/client/views/partials/gps/gpsReports.html
@@ -20,10 +20,31 @@
                         <!--<button type="button" class="btn go">Go</button>-->
                     </li>
 
-                    <li class="sea-wid">
-                        <div class="search-box">
-                            <input type="text" class="form-control textfiled1" placeholder="Search by truck no">
-                            <input type="button" ng-click="getTruckReport()" class="sea-btn">
+                    <li class="sea-wid" style="width:39.5%;">
+                        <div class="search-box reports-search">
+                            <!--<input type="text" class="form-control textfiled1" placeholder="Search by truck no">-->
+
+                            <ui-select ng-model="reportParams.truckNo" theme="select2"
+                                       style="min-width: 95%;"
+                                       title="Search by truck no" reset-search-input="false">
+
+                                <ui-select-match placeholder="Search by truck no" class="form-control order-form-control">
+                                    {{$select.selected.registrationNo}}
+                                </ui-select-match>
+                                <ui-select-choices
+                                        repeat="truck in trucks " refresh="getAllTrucksForAccount($select.search)"
+                                        refresh-delay="0" scroll-detector="loadMore()">
+
+                                        <div ng-bind-html="truck.registrationNo"></div>
+                                    <small>
+                                        Truck Type: {{truck.truckType || '---'}}
+                                    </small>
+                                </ui-select-choices>
+                            </ui-select>
+
+                            <div class="pull-right" style="position: absolute; top:1px; right:23px;">
+                                <input type="button" ng-click="getTruckReport()" class="sea-btn">
+                            </div>
                         </div>
                         <div class="clearfix"></div>
                     </li>
