--- a/client/views/index.html
+++ b/client/views/index.html
@@ -35,7 +35,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse col-sm-10" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav col-sm-9">
-                <li ng-class="{selected: subTab === 'ERP'}"> <a href="#" ui-sref="reports">
+                <li ng-hide="erpEnabled=='false'"  ng-class="{selected: subTab === 'ERP'}"> <a href="#"  ui-sref="reports">
                     <img src="images/erp.png"><span>ERP</span></a></li>
                 <li ng-class="{selected: activeTab === 'gpsReports'}"><a href="#" ui-sref="gpsReports">
                     <img src="images/gps.png"><span>GPS</span></a></li>
@@ -59,8 +59,8 @@
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#" ui-sref="myProfile">My Profile</a></li>
-                        <li><a href="#" ng-show="createGroup" ui-sref="myGroup">My Groups</a></li>
-                        <li><a href="#" ng-show="createGroup" ui-sref="addGroup">Add Group</a></li>
+                        <li><a href="#" ng-show="type=='account'" ui-sref="myGroup">My Groups</a></li>
+                        <li><a href="#" ng-show="type=='account'" ui-sref="addGroup">Add Group</a></li>
                         <li><a href="#" ng-click="logout()">Logout</a></li>
 
                     </ul>
