--- a/client/views/partials/admin/orderProcess/editOrderRequest.html
+++ b/client/views/partials/admin/orderProcess/editOrderRequest.html
@@ -169,7 +169,7 @@
                                         <td></td>
                                         <td></td>
                                         <td><b>Total</b></td>
-                                        <td><b><i class="fa fa-inr"></i> {{paymentsDetails.total}}.00</b></td>
+                                        <td><b><i class="fa fa-inr"></i> {{transactionsDetails.total}}.00</b></td>
                                     </tr>
                                     </tbody>
                                 </table>
