--- a/client/views/partials/userProfile/addingGroup.html
+++ b/client/views/partials/userProfile/addingGroup.html
@@ -46,7 +46,7 @@
                         </div>
                         <div class="col-sm-4 col-xs-12">
                             <div class="form-group styling-input-list">
-                                <input type="text" class="form-control custom-form-control" ng-model="group.location"/>
+                                <input type="text" class="form-control custom-form-control" ng-model="group.location" id="location" ng-change="searchLocation()"/>
                                 <label class="focus-effect-for-input" aria-hidden="true">Location</label>
                             </div>
 
