--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -6,7 +6,7 @@
                 <div class="col-xs-12 styling-input-list">
                     <input type="text" class="form-control custom-form-control" ng-readonly="userType==='group'"
                            ng-disabled="userType==='group'" ng-model="truck.registrationNo"/>
-                    <label class="focus-effect-for-input" aria-hidden="true">Truck Number</label>
+                    <label class="focus-effect-for-input" aria-hidden="true">Truck Number *</label>
                 </div>
             </div>
             <div class="form-group col-xs-12">
@@ -46,7 +46,7 @@
                     <ui-select ng-model="truck.driverId" theme="select2"
                                style="min-width: 390px;"
                                title="Choose a person" append-to-body="true">
-                        <ui-select-match placeholder="Select a Driver*" class="form-control custom-form-control">
+                        <ui-select-match placeholder="Select a Driver" class="form-control custom-form-control">
                             {{$select.selected.fullName || driverName}}
                         </ui-select-match>
                         <ui-select-choices
@@ -59,26 +59,35 @@
         </div>
         <div class="col-sm-6 col-xs-12 mt-10">
 
-            <div class="form-group col-xs-12">
+            <div class="form-group col-xs-12 styling-input-list-trucks">
                 <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"
-                             placeholder="'Fitness Due Expiry Date*'" class="'custom-form-control'"></date-picker>
+                              class="'custom-form-control'"></date-picker>
+                <label class="focus-effect-for-input-trucks" aria-hidden="true">Fitness Expiry</label>
             </div>
-            <div class="form-group col-xs-12">
+            <div class="form-group col-xs-12 styling-input-list-trucks">
                 <date-picker id="permitExpiry" ng-model="truck.permitExpiry"
-                             placeholder="'Permit Due Expiry Date*'" class="'custom-form-control'"></date-picker>
+                           class="'custom-form-control'"></date-picker>
+                <label class="focus-effect-for-input-trucks" aria-hidden="true">Permit Due Expiry Date*</label>
+
             </div>
-            <div class="form-group col-xs-12">
+            <div class="form-group col-xs-12 styling-input-list-trucks">
 
                 <date-picker id="insuranceExpiry" ng-model="truck.insuranceExpiry"
-                             placeholder="'Insurance Due Expiry Date*'" class="'custom-form-control'"></date-picker>
+                            class="'custom-form-control'"></date-picker>
+                <label class="focus-effect-for-input-trucks" aria-hidden="true">Insurance Due Expiry Date*</label>
+
             </div>
-            <div class="form-group col-xs-12">
+            <div class="form-group col-xs-12 styling-input-list-trucks">
                 <date-picker id="pollutionExpiry" ng-model="truck.pollutionExpiry"
-                             placeholder="'Pollution Due Expiry Date*'" class="'custom-form-control'"></date-picker>
+                            class="'custom-form-control'"></date-picker>
+                <label class="focus-effect-for-input-trucks" aria-hidden="true">Pollution Due Expiry Date*</label>
+
             </div>
-            <div class="form-group col-xs-12">
+            <div class="form-group col-xs-12 styling-input-list-trucks">
                 <date-picker id="taxDueDate" ng-model="truck.taxDueDate"
-                             placeholder="'Tax Due Expiry Date*'" class="'custom-form-control'"></date-picker>
+                            class="'custom-form-control'"></date-picker>
+                <label class="focus-effect-for-input-trucks" aria-hidden="true">Tax Due Expiry Date*</label>
+
             </div>
         </div>
         <div class="clearfix"></div>
