--- a/client/views/partials/settings/gpsSettings.html
+++ b/client/views/partials/settings/gpsSettings.html
@@ -14,7 +14,8 @@
                         <h3>GPS Settings</h3>
                         <div class="form-group">
                             <div class="col-xs-12 styling-input-list">
-                                <input type="text" ng-model="gpsSettingsParams.idleTime" class="form-control custom-form-control">
+                                <input type="text" ng-model="gpsSettingsParams.idleTime"
+                                       class="form-control custom-form-control">
                                 <label class="focus-effect-for-input" aria-hidden="true">Min Stop Duration 10</label>
                             </div>
                             <div class="clearfix"></div>
@@ -23,7 +24,8 @@
                     <div class="col-xs-12 pall-zero">
                         <div class="form-group">
                             <div class="col-xs-12 styling-input-list">
-                                <input type="text" ng-model="gpsSettingsParams.overSpeedLimit" class="form-control custom-form-control">
+                                <input type="text" ng-model="gpsSettingsParams.overSpeedLimit"
+                                       class="form-control custom-form-control">
                                 <label class="focus-effect-for-input" aria-hidden="true">Over Speed Limit KMPH</label>
                             </div>
                             <div class="clearfix"></div>
@@ -32,7 +34,8 @@
                     <div class="col-xs-12 pall-zero">
                         <div class="form-group">
                             <div class="col-xs-12 styling-input-list">
-                                <input type="text" ng-model="gpsSettingsParams.routeNotificationInterval" class="form-control custom-form-control">
+                                <input type="text" ng-model="gpsSettingsParams.routeNotificationInterval"
+                                       class="form-control custom-form-control">
                                 <label class="focus-effect-for-input" aria-hidden="true">Route Notification
                                     Interval</label>
                             </div>
@@ -42,7 +45,8 @@
                     <div class="col-xs-12 pall-zero">
                         <div class="form-group">
                             <div class="col-xs-12 styling-input-list">
-                                <input type="text" ng-model="gpsSettingsParams.stopTime" class="form-control custom-form-control">
+                                <input type="text" ng-model="gpsSettingsParams.stopTime"
+                                       class="form-control custom-form-control">
                                 <label class="focus-effect-for-input" aria-hidden="true">Stop Alert Time</label>
                             </div>
                             <div class="clearfix"></div>
@@ -52,37 +56,32 @@
                         <button class="btn can last" ng-click="updateGpsSettings()" type="submit">Submit</button>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6  mt-20">
+                <div class="col-xs-12 col-sm-6 mt-20">
                     <h3>Operating Routes</h3>
-                    <div class="form-group pos-relative styling-input-list"
-                         ng-repeat="operatingRoute in operatingRoutes track by $index">
-                        <div class="form-group styling-input-list">
+                    <div class="form-group pos-relative routes"
+                         ng-repeat="operatingRoute in operatingRoutesList track by $index">
+                        <div class="form-group col-sm-6 styling-input-list">
                             <input type="text" class="form-control custom-form-control" name="source"
                                    ng-model="operatingRoute.source" id="searchSource{{$index}}"
                                    ng-change="addSearchSource($index)"/>
                             <label class="focus-effect-for-input">Source</label>
                         </div>
-                        <div class="form-group styling-input-list">
+                        <div class="form-group col-sm-6 styling-input-list">
                             <input type="text" class="form-control custom-form-control" name="destination"
                                    ng-model="operatingRoute.destination" id="searchDestination{{$index}}"
                                    ng-change="addSearchDestination($index)"/>
                             <label class="focus-effect-for-input">Destination</label>
                         </div>
-                        <div class="form-group styling-input-list">
-                            <select class="form-control custom-form-control"
-                                    ng-model="operatingRoute.truckType">
-                                <option value="" selected>Truck Type</option>
-                                <option ng-repeat="trucksType in getTruckTypes" value="{{trucksType._id}}">
-                                    {{trucksType.title}}
-                                </option>
-                            </select>
-                        </div>
+
                         <span class="plus-pos" ng-show="$index >= 1">
                                 <i class="fa fa-times-circle clr-red"
                                    ng-click="deleteOperatingRoute($index)"></i></span>
-                        <span class="plus-pos" ng-show="$index == 0">
+                        <span class="close-pos" ng-show="$index == 0">
                                 <i class="fa fa-plus-square" aria-hidden="true"
                                    ng-click="addOperatingRoute()"></i></span>
+                    </div>
+                    <div class="col-xs-12 pall-zero">
+                        <button class="btn can last" ng-click="updateOperatingRoutes()" type="submit">Submit</button>
                     </div>
 
                 </div>
