--- a/client/views/partials/admin/orderProcess/editOrderRequest.html
+++ b/client/views/partials/admin/orderProcess/editOrderRequest.html
@@ -59,7 +59,7 @@
                     <div class="row">
                         <div class="col-xs-12 perTransct">
                             <ul class="list-inline">
-                                <li class="pull-left"><b>Truck OwnerBilling (per Transaction(Default))</b></li>
+                                <li class="pull-left"><b>Truck Owner Billing (per Transaction(Default))</b></li>
                                 <li class="pull-right">
                                     <button class="btn btn-primary" ng-click="truckPayment('Truck Owner')">New</button>
                                 </li>
@@ -85,7 +85,7 @@
                                         <td></td>
                                         <td></td>
                                         <td><b>Total</b></td>
-                                        <td><b><i class="fa fa-inr"></i> {{paymentsDetails.total}}.00</b></td>
+                                        <td><b><i class="fa fa-inr"></i> {{transactionsDetails.total}}.00</b></td>
                                     </tr>
                                     </tbody>
                                 </table>
