Receipt Module added

--- a/client/views/partials/userProfile/myGroup.html
+++ b/client/views/partials/userProfile/myGroup.html
@@ -5,8 +5,8 @@
                 <div class="top-block">
                 <ul class="list-inline">
                     <li><a href="#" ui-sref="myProfile">My Profile</a></li>
-                    <li><a href="#" ui-sref="myGroup" class="activeProfileTab" ng-show="role==='account'">My Group</a></li>
-                    <li><a href="#" ui-sref="addGroup" ng-show="role==='account'">Add Group</a></li>
+                    <li><a href="#" ui-sref="myGroup" class="activeProfileTab" ng-show="type==='account'">My Group</a></li>
+                    <li><a href="#" ui-sref="addGroup" ng-show="type==='account'">Add Group</a></li>
                 </ul>
                 </div>
                 <div class="main-right col-xs-12" ng-controller="ShowAccountsCtrl">
