--- a/client/views/index.html
+++ b/client/views/index.html
@@ -83,6 +83,7 @@
                     <left-menu label="Drivers" ui-sref="drivers"></left-menu>
                     <left-menu label="Parties" ui-sref="parties"></left-menu>
                     <left-menu label="Payments" ui-sref="payments"></left-menu>
+                    <left-menu label="Receipts" ui-sref="receipts"></left-menu>
                     <left-menu label="Trips" ui-sref="trips"></left-menu>
                     <!--<left-menu label="Expense-Master"></left-menu>-->
                     <left-menu label="Expenses" ui-sref="expenses"></left-menu> <div class="clearfix"></div>
